update the display of flb